<resources>
    <string name="app_name" translatable="false">Cool Weather App</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="sea_level_pressure">Sea Level Pressure</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="temperature">Temperature</string>
    <string name="time">Time</string>
    <string name="update">Update</string>
</resources>